pushing before flickering fix

--- a/reactfrontend/src/user/UserLogin.css
+++ b/reactfrontend/src/user/UserLogin.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 65vh;
+    /* height: 65vh; */
     /* background: linear-gradient(135deg, #1e3c72, #2a9840); */
     color: white;
     font-family: Arial, sans-serif;
@@ -14,6 +14,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    margin-top: 35px;
 }
 
 /* Login Box */
